--- a/AdbController.vcxproj
+++ b/AdbController.vcxproj
@@ -192,11 +192,14 @@
     <ClInclude Include="AdbController.h" />
     <ClInclude Include="AdbControllerDlg.h" />
     <ClInclude Include="ConsolePipe.h" />
+    <ClInclude Include="DeviceInfo.h" />
     <ClInclude Include="MyconsolePipe.h" />
     <ClInclude Include="PackageDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="ThreadExec.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AdbController.cpp" />
@@ -208,6 +211,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ThreadExec.cpp" />
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="AdbController.rc" />
