--- a/AdbController.vcxproj.filters
+++ b/AdbController.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="PackageDlg.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="ThreadExec.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Utility.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="DeviceInfo.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AdbControllerDlg.cpp">
@@ -54,6 +63,12 @@
       <Filter>原始程式檔</Filter>
     </ClCompile>
     <ClCompile Include="PackageDlg.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="ThreadExec.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="Utility.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
